chore(profile-modal): Fix CSS Input alignment confict

--- a/src/feature/Reset Password/resetPassword.scss
+++ b/src/feature/Reset Password/resetPassword.scss
@@ -29,11 +29,6 @@
     padding-top: 1%;
     margin-left: 4%;
 }
-input,
-.inputForm::-webkit-input-placeholder {
-    font-size: 20px;
-    line-height: 2;
-}
 .send{
     position: absolute;
     right: 23%;
